Fix: text color in dark mode

--- a/src/components/experienceCard/ExperienceCard.scss
+++ b/src/components/experienceCard/ExperienceCard.scss
@@ -93,7 +93,7 @@
 
 .experience-text-role {
   text-align: center;
-  color: $textColor;
+  //color: $textColor;
   font-weight: 700;
   font-size: 25px;
   margin: 0px;
@@ -103,7 +103,7 @@
 
 .experience-text-date {
   text-align: center;
-  color: $textColor;
+  // color: $textColor;
   font-size: 20px;
   margin: 0px;
   padding-top: 1rem;
@@ -128,7 +128,7 @@
   text-align: left;
   padding-left: 2.5rem;
   padding-top: 1.5rem;
-  color: $textColor;
+  // color: $textColor;
   font-weight: 700;
   font-size: 25px;
   margin: 0px;
